<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_chart"
        android:icon="@drawable/ic_chart"
        android:title="@string/label_chart"
        app:iconTint="@color/text_primary"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share_card"
        android:icon="@drawable/ic_share"
        android:title="@string/action_share"
        app:iconTint="@color/text_primary"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_transfer_qr"
        android:icon="@drawable/ic_qr"
        android:title="@string/action_show_qr"
        app:iconTint="@color/text_primary"
        app:showAsAction="always" />
</menu>
