<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_export"
        android:title="@string/action_export_zip"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import"
        android:title="@string/action_import_zip"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_scan_qr"
        android:title="@string/action_scan_qr"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_language"
        android:title="Language / 語言 / 语言"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
